--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -202,7 +202,7 @@ input {
     kb_layout = us, de
     kb_variant =
     kb_model =
-    kb_options = grp:alt_shift_toggle,ctrl:nocaps,ctrl:escape
+    kb_options = grp:alt_shift_toggle,caps:nocaps,caps:escape
     kb_rules =
 
     follow_mouse = 1
