--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,8 +35,8 @@ set -g @catppuccin_flavour 'mocha'
 set -g @tokyo-night-tmux_show_datetime 0
 set -g @tokyo-night-tmux_show_path 1
 set -g @tokyo-night-tmux_path_format relative
-set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_window_id_style dsquare
+set -g @tokyo-night-tmux_window_id_style hsquare
+set -g @tokyo-night-tmux_active_window_id_style fsquare
 set -g @tokyo-night-tmux_show_git 0
 
 set -g @plugin 'tmux-plugins/tpm'
@@ -46,6 +46,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 #set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin "erasor954/tokyo-night-tmux"
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
 run '~/.tmux/plugins/tpm/tpm'
 
