added transparency for weztern

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -83,7 +83,8 @@ env = HYPRCURSOR_SIZE,24
 #####################
 ### LOOK AND FEEL ###
 #####################
-
+# Transparent windows seperate by |
+windowrulev2 = opacity 1.0 0.80,class:^(org.wezfurlong.wezterm)$
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 
 # https://wiki.hypr.land/Configuring/Variables/#general
