--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,10 +6,12 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @vim_navigator_mapping_left "C-Left C-h"  # use C-h and C-Left
+set -g @vim_navigator_mapping_right "C-Right C-l"
+set -g @vim_navigator_mapping_up "C-k"
+set -g @vim_navigator_mapping_down "C-j"
+set -g @vim_navigator_mapping_prev ""  # removes the C-\ binding
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
