changed tmux tab keybinds

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -61,4 +61,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+bind t new-window -c "#{pane_current_path}"
+
+unbind x
+unbind w
+bind w confirm-before -p "kill-pane #P? (y/n)" kill-pane
