--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,17 +13,17 @@ set -g @vim_navigator_mapping_up "C-k"
 set -g @vim_navigator_mapping_down "C-j"
 set -g @vim_navigator_mapping_prev ""  # removes the C-\ binding
 
+# Resize panes
+bind-key -r H resize-pane -L 3 # Resize Left
+bind-key -r J resize-pane -D 3 # Resize Down
+bind-key -r K resize-pane -U 3 # Resize Up
+bind-key -r L resize-pane -R 3 # Resize Right
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
-
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
