--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,16 +1,17 @@
 {
-  "layer": "top",
-  "position": "top",
-  "modules-left": ["hyprland/workspaces"],
+    "layer": "top",
+    "position": "top",
+    "modules-left": ["hyprland/workspaces"],
 
-  "modules-center": ["clock", "custom/weather"],
+    "modules-center": ["clock", "custom/weather"],
 
-  "modules-right": [
-    "pulseaudio",
+    "modules-right": [
+        "pulseaudio",
     //"custom/uptime",
     "backlight",
     "battery",
     "power-profiles-daemon",
+    "bluetooth",
     "network",
     "cpu",
     "memory",
@@ -18,110 +19,120 @@
     "tray",
     "custom/lock",
     "custom/power"
-  ],
+    ],
 
-  "hyprland/workspaces": {
-    "format": "{name}: {icon}",
-    "format-icons": {
-      "active": "",
-      "default": ""
-    }
-  },
-
-  "tray": {
-    "icon-size": 16,
-    "spacing": 10
-  },
-
-  "custom/music": {
-    "format": "  {}",
-    "escape": true,
-    "interval": 5,
-    "tooltip": false,
-    "exec": "playerctl metadata --format='{{ artist }} - {{ title }}'",
-    "on-click": "playerctl play-pause",
-    "max-length": 50
-  },
-
-  "clock": {
-    "locale" : "de_DE.utf8",
-    "timezone": "Europe/Berlin",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "format": "{:%d/%m/%Y - %H:%M:%S}",
-    "interval": 1,
-    "calendar": {
-        "mode": "month",
-        "mode-mon-col": 3,
-        "weeks-pos": "right",
-        "on-scroll": 1,
-        "on-click-right": "mode",
-        "format": {
-            "months": "<span color='#ffead3'><b>{}</b></span>",
-            "days": "<span color='#ecc6d9'><b>{}</b></span>",
-            "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
-            "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-            "today": "<span color='#ff6699'><b>{}</b></span>"
+    "hyprland/workspaces": {
+        "format": "{name}: {icon}",
+        "format-icons": {
+            "active": "",
+            "default": ""
         }
-    }
-  },
-
-  "network": {
-    "format-wifi": "󰤢 {bandwidthDownBits}",
-    "format-ethernet": "󰈀 {bandwidthDownBits}",
-    "format-disconnected": "󰤠 No Network",
-    "interval": 5,
-    "tooltip": false,
-    "on-click": "wezterm start nmtui"
-  },
-
-  "cpu": {
-    "interval": 1,
-    "format": "  {icon0}{icon1}{icon2}{icon3} {usage:>2}%",
-    "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
-  },
-
-  "memory": {
-    "interval": 30,
-    "format": "  {used:0.1f}G/{total:0.1f}G"
-  },
-
-  "custom/uptime": {
-    "format": "{}",
-    "interval": 1600,
-    "exec": "sh -c '(uptime -p)'"
-  },
-
-  "pulseaudio": {
-    "format": "{icon} {volume}%",
-    "format-muted": "",
-    "format-icons": {
-      "default": ["", "", " "]
     },
-    "on-click": "pavucontrol"
-  },
 
-  "custom/power": {
-    "tooltip": false,
-    "on-click": "wlogout &",
-    "format": "⏻"
-  },
+    "tray": {
+        "icon-size": 16,
+        "spacing": 10
+    },
 
-  "custom/docker": {
-    "format": "{}",
-    "return-type": "json",
-    "interval": 10,
-    "exec": "$(pwd)/scripts/docker-stats/docker-stats",
-    "tooltip": true
-  },
+    "custom/music": {
+        "format": "  {}",
+        "escape": true,
+        "interval": 5,
+        "tooltip": false,
+        "exec": "playerctl metadata --format='{{ artist }} - {{ title }}'",
+        "on-click": "playerctl play-pause",
+        "max-length": 50
+    },
 
-  "custom/weather": {
-    "format": "{}",
-    "tooltip": true,
-    "interval": 1800,
-    "exec": "/home/erasor/.config/waybar/scripts/weather-stats/weather-stats",
-    "return-type": "json"
-  },
-  "battery": {
+    "clock": {
+        "locale" : "de_DE.utf8",
+        "timezone": "Europe/Berlin",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format": "{:%d/%m/%Y - %H:%M:%S}",
+        "interval": 1,
+        "calendar": {
+            "mode": "month",
+            "mode-mon-col": 3,
+            "weeks-pos": "right",
+            "on-scroll": 1,
+            "on-click-right": "mode",
+            "format": {
+                "months": "<span color='#ffead3'><b>{}</b></span>",
+                "days": "<span color='#ecc6d9'><b>{}</b></span>",
+                "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
+                "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+                "today": "<span color='#ff6699'><b>{}</b></span>"
+            }
+        }
+    },
+
+    "bluetooth": {
+    // "format": " {status}", // Default format
+    "format-on": "󰂯", // Icon for 'on' but not connected
+    "format-off": "󰂲", // Icon for 'off'
+    "format-disabled": "", // Hides module when disabled
+    "format-connected": "󰂱 {device_alias}", // Shows icon and device name
+    "tooltip-format": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
+    "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+    "on-click": "blueman-manager" // Or "blueberry", "rfkill toggle bluetooth", etc.
+    },
+    "network": {
+        "format-wifi": "󰤢 {bandwidthDownBits}",
+        "format-ethernet": "󰈀 {bandwidthDownBits}",
+        "format-disconnected": "󰤠 No Network",
+        "interval": 5,
+        "tooltip": false,
+        "on-click": "wezterm start nmtui"
+    },
+
+    "cpu": {
+        "interval": 1,
+        "format": "  {icon0}{icon1}{icon2}{icon3} {usage:>2}%",
+        "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
+    },
+
+    "memory": {
+        "interval": 30,
+        "format": "  {used:0.1f}G/{total:0.1f}G"
+    },
+
+    "custom/uptime": {
+        "format": "{}",
+        "interval": 1600,
+        "exec": "sh -c '(uptime -p)'"
+    },
+
+    "pulseaudio": {
+        "format": "{icon} {volume}%",
+        "format-muted": "",
+        "format-icons": {
+            "default": ["", "", " "]
+        },
+        "on-click": "pavucontrol"
+    },
+
+    "custom/power": {
+        "tooltip": false,
+        "on-click": "wlogout &",
+        "format": "⏻"
+    },
+
+    "custom/docker": {
+        "format": "{}",
+        "return-type": "json",
+        "interval": 10,
+        "exec": "$(pwd)/scripts/docker-stats/docker-stats",
+        "tooltip": true
+    },
+
+    "custom/weather": {
+        "format": "{}",
+        "tooltip": true,
+        "interval": 1800,
+        "exec": "/home/erasor/.config/waybar/scripts/weather-stats/weather-stats",
+        "return-type": "json"
+    },
+    "battery": {
         "states": {
             // "good": 95,
             "warning": 30,
@@ -137,14 +148,14 @@
         "format-icons": ["", "", "", "", ""]
     },
     "power-profiles-daemon": {
-      "format": "{icon}",
-      "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
-      "tooltip": true,
-      "format-icons": {
-        "default": "",
-        "performance": "",
-        "balanced": "",
-        "power-saver": ""
-      }
+        "format": "{icon}",
+        "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
+        "tooltip": true,
+        "format-icons": {
+            "default": "",
+            "performance": "",
+            "balanced": "",
+            "power-saver": ""
+        }
     }
 }
