added 80 character line in nvim

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -246,6 +246,7 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, B, exec, $browser 
 bind = $mainMod, P, exec, /home/erasor/.local/bin/rofi-rbw
+bind = $mainMod, C, exec, hyprpicker
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
