--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -38,6 +38,7 @@ $fileManager = nautilus
 #$menu = wofi --show drun
 $menu = fuzzel
 $browser = firefox
+$editor = ~/.local/bin/zed
 
 #################
 ### AUTOSTART ###
@@ -233,6 +234,7 @@ device {
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
+$shiftMod = SHIFT + SUPER
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
@@ -245,8 +247,13 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, B, exec, $browser 
-bind = $mainMod, P, exec, /home/erasor/.local/bin/rofi-rbw
-bind = $mainMod, C, exec, hyprpicker
+#bind = $mainMod, P, exec, /home/erasor/.local/bin/rofi-rbw
+bind = $mainMod, C, exec, $editor
+bind = $shiftMod, C, exec, hyprpicker -a
+# Screenshot tool
+bind = $mainMod, P, exec, hyprshot -o /home/erasor/Pictures/Screenshots/ -m window
+bind = $shiftMod, P, exec, hyprshot -o /home/erasor/Pictures/Screenshots/ -m region
+bind = $mainMod, Z, exec, $editor 
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
